SalesForce/csp-sfdc-org/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Owner_1_Fax_Number__c</fullName>
        <label>Owner 1 Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_1_Name__c</fullName>
        <label>Owner 1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Postal_Code__c</fullName>
        <label>Owner 1 Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Social_Security_Number__c</fullName>
        <label>Owner 1 Social Security Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Owner_1_State_Province__c</fullName>
        <label>Owner 1 State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Street_Address_1__c</fullName>
        <label>Owner 1 Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_1_Street_Address_2__c</fullName>
        <label>Owner 1 Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_2_City__c</fullName>
        <label>Owner 2 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Country__c</fullName>
        <label>Owner 2 Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Fax_Number__c</fullName>
        <label>Owner 2 Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_2_Name__c</fullName>
        <label>Owner 2 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Postal_Code__c</fullName>
        <label>Owner 2 Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Social_Security_Number__c</fullName>
        <label>Owner 2 Social Security Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Owner_2_State_Province__c</fullName>
        <label>Owner 2 State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Street_Address_1__c</fullName>
        <label>Owner 2 Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_3_City__c</fullName>
        <label>Owner 3 City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Country__c</fullName>
        <label>Owner 3 Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Fax_Number__c</fullName>
        <label>Owner 3 Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_3_Name__c</fullName>
        <label>Owner 3 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Postal_Code__c</fullName>
        <label>Owner 3 Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Social_Security_Number__c</fullName>
        <label>Owner 3 Social Security Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Owner_3_State_Province__c</fullName>
        <label>Owner 3 State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Business_Unit__c</fullName>
        <formula>Text( Owner.BusinessUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Geography__c</fullName>
        <formula>TEXT(Owner.Geography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Compliance_Status__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>PCI Compliance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payee_Name_1__c</fullName>
        <label>Payee Name 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Name_2__c</fullName>
        <label>Payee Name 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_of_Cost__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Percent Of Cost That Is Repayment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Sales__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Percent Of Sales In This Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandarin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premier_Flag__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Premier Flag</label>
        <picklist>
            <picklistValues>
                <fullName>PREMIERCAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMGRUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Premier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Number__c</fullName>
        <label>Primary Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Propensity_to_Quit__c</fullName>
        <label>Propensity to Quit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Of_Priority__c</fullName>
        <label>Rank Of Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF( BillingCountry = &apos;United States&apos;, &quot;US&quot;, IF( BillingCountry = &apos;Canada&apos;, &quot;CA&quot;, IF( BillingCountry = &apos;United Kingdom&apos;, &quot;UK&quot;, &quot;AP&quot;)))</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Sales_Lead__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Responsible Sales Lead</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Address_Name__c</fullName>
        <label>Retrieval Address Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Attention_To__c</fullName>
        <label>Retrieval Attention To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_City__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Retrieval City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Country__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Retrieval Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Fax_Number__c</fullName>
        <label>Retrieval Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Retrieval_Lookup__c</fullName>
        <label>Retrieval Lookup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Method__c</fullName>
        <label>Retrieval Delivery Method</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_State__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Retrieval State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrieval_Street_Address_1__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Retrieval Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retrieval_Street_Address_2__c</fullName>
        <label>Retrieval Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retrieval_Zip_Code__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Retrieval Zip Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Comments__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <inlineHelpText>Indicate any necessary comments as to why this merchant has been flagged as a risk.</inlineHelpText>
        <label>Risk Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Flag_Closed_By__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Risk Flag Closed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Flag_Closed_Time__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Risk Flag Closed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Risk_Flag_Last_Updated_By__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Risk Flag Last Updated By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Flag_Last_Updated_Time__c</fullName>
        <label>Risk Flag Last Updated Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Risk_Flag_Opened_By__c</fullName>
        <label>Risk Flag Opened By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Flag_Opened_Time__c</fullName>
        <label>Risk Flag Opened Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Risk_Flag__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Risk Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Flag</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Subcategory__c</fullName>
        <label>Risk Subcategory</label>
        <picklist>
            <controllingField>Risk_Flag__c</controllingField>
            <picklistValues>
                <fullName>Chargeback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excessive Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susan 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Profile__c</fullName>
        <formula>Card_Swiped__c  +  Manually__c  +  Mail_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Profile (Must Equal 100%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_1__c</fullName>
        <label>Service #1</label>
        <picklist>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_2__c</fullName>
        <label>Service #2</label>
        <picklist>
            <picklistValues>
                <fullName>GPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_3__c</fullName>
        <label>Service #3</label>
        <picklist>
            <picklistValues>
                <fullName>GPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rep_Code__c</fullName>
        <label>Service Rep Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rep_Name__c</fullName>
        <label>Service Rep Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rep_Phone__c</fullName>
        <label>Service Rep Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Services_Provided_by_Global_Payments__c</fullName>
        <formula>IF(

Text( Parent.Type ) &lt;&gt; &quot;ISO&quot;,
&quot;Full Service&quot;, &quot;&quot;) 

&amp;

IF(

AND(Text( Parent.Type ) = &quot;ISO&quot;, Text( Parent.Service_1__c ) = &quot;GPN&quot; ), 
&quot;Service #1, &quot; ,&quot;&quot;)

&amp;

IF(

AND(Text( Parent.Type ) = &quot;ISO&quot;, Text( Parent.Service_2__c ) = &quot;GPN&quot; ), 
&quot;Service #2, &quot; ,&quot;&quot;)

&amp;

IF(

AND(Text( Parent.Type ) = &quot;ISO&quot;, Text( Parent.Service_3__c ) = &quot;GPN&quot; ), 
&quot;Service #3, &quot; ,&quot;&quot;)</formula>
        <inlineHelpText>If a service is not listed, then refer the Merchant to their ISO.</inlineHelpText>
        <label>Services Provided by Global Payments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Configuration__c</fullName>
        <label>Settlement Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Host Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminal Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Security__c</fullName>
        <label>Social Security</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Special_Merchant_Notes__c</fullName>
        <formula>IF(
 
OR(
TEXT( Risk_Flag__c ) = &quot;Risk&quot;, 
TEXT( Risk_Flag__c ) = &quot;Credit&quot;
)

, 

&quot;All cases will automatically forward to Risk/Credit Teams&quot;

, 

&quot;None&quot;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Merchant Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spoken_Language__c</fullName>
        <label>Spoken Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>C – Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D – Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F – Frozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O – Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P – Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R – Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T – Transferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplies_Account_Number__c</fullName>
        <label>Supplies Account Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Supplies_Routing_Number__c</fullName>
        <label>Supplies Routing Number</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Surrounding_Area__c</fullName>
        <label>Surrounding Area</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Information_Address_Name__c</fullName>
        <label>Tax Information Address Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Information_City__c</fullName>
        <label>Tax Information City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Information_Country__c</fullName>
        <label>Tax Information Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Information_Fax_Number__c</fullName>
        <label>Tax Information Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tax_Information_Postal_Code__c</fullName>
        <label>Tax Information Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Information_State_Province__c</fullName>
        <label>Tax Information State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Information_Street_Address_1__c</fullName>
        <label>Tax Information Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Information_Street_Address_2__c</fullName>
        <label>Tax Information Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total Visa/MC/Discover Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Goods_or_Services_Sold__c</fullName>
        <label>Type Of Goods Or Services Sold</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Ownership__c</fullName>
        <label>Type Of Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Proprietor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Exempt Org</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAR_Lookup__c</fullName>
        <label>VAR Lookup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Was_Fulfillment_House_Inspected__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Was the Fulfillment House Inspected?</label>
        <picklist>
            <controllingField>Does_Merchant_Have_a_Fulfillment_House__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_Address__c</fullName>
        <label>Website Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weeks__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Weeks of Extended Service Or Benefit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X501_C__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>501C</label>
        <picklist>
            <controllingField>Type_of_Ownership__c</controllingField>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_as_Global_Payments_Merchant__c</fullName>
        <description>Added/Modified specifically for the CSP</description>
        <label>Years as Global Payments Merchant</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <description>Sales effectiveness Years in Business for Phase 1.2</description>
        <label>Years In Business Under Current Owner</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Auto_Number__c</columns>
        <columns>Merchants_DBA_Name__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>Hierarchy_No__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Merchants</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Owner_Geography__c</columns>
        <columns>Owner_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner_Account</value>
        </filters>
        <label>All Partner Accounts</label>
    </listViews>
    <listViews>
        <fullName>CA_Merchant_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Geography__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Merchant_Account</value>
        </filters>
        <label>CA Merchant Accounts</label>
    </listViews>
    <listViews>
        <fullName>CA_Merchant_Accounts_incl_created_date</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Geography__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Merchant_Account</value>
        </filters>
        <label>CA Merchant Accounts( incl created date)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Support_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CA_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Owner_Geography__c</columns>
        <columns>Owner_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Geography__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner_Account</value>
        </filters>
        <label>CA Partner Accounts</label>
    </listViews>
    <listViews>
        <fullName>CA_VAR_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Owner_Business_Unit__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>VAR</value>
        </filters>
        <label>CA VAR Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Merchant_Account</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>US_Merchant_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Geography__c</field>
            <operation>equals</operation>
            <value>United States</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Merchant_Account</value>
        </filters>
        <label>US Merchant Accounts</label>
    </listViews>
    <listViews>
        <fullName>US_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Owner_Geography__c</columns>
        <columns>Owner_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Geography__c</field>
            <operation>equals</operation>
            <value>United States</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner_Account</value>
        </filters>
        <label>US Partner Accounts</label>
    </listViews>
</CustomObject>